Run and fix bugs on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,13 +1,50 @@
 /* PC */
-@media (min-width: 1024px) {
+@media (min-width: 64em) {
+}
+
+/* Tablet & mobile */
+@media (max-width: 63.9375em) {
+  .btn {
+    padding: 15px 16px;
+  }
+
+  #nav .subnav a {
+    padding: 5px 12px;
+  }
+
+  .contact-form .form-control {
+    padding: 15px;
+    font-size: 16px;
+  }
+
+  .contact-info {
+    line-height: 2;
+  }
+
+  .contact-submit-btn {
+    font-size: 16px;
+  }
+
+  .socials-list {
+    font-size: 48px;
+  }
+
+  #footer .socials-list a {
+    margin: 0 8px;
+  }
+
+  #footer .copyright a {
+    padding: 12px 0;
+    display: inline-block;
+  }
 }
 
 /* Tablet */
-@media (min-width: 739px) and (max-width: 1023px) {
+@media (min-width: 46.25em) and (max-width: 63.9375em) {
 }
 
 /* Mobile */
-@media (max-width: 740px) {
+@media (max-width: 46.1875em) {
   .s-full-width,
   .s-col-full {
     width: 100% !important;
@@ -60,6 +97,6 @@
   }
 
   .contact-form {
-    margin-top: 16px;
+    margin-top: 32px;
   }
 }
